// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown can focus dropdown and select option 1`] = `
.c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c4 {
  opacity: 0.8;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4"
        />
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown closes options when clicking outside 1`] = `
<DocumentFragment>
  .c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 7;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 0px solid transparent;
  border-bottom-right-radius: 0rem;
  border-bottom-left-radius: 0rem;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c9 {
  background: white;
  position: absolute;
  top: 100%;
  left: 0px;
  max-height: 10rem;
  overflow-y: auto;
  width: 15rem;
  border: 1px solid #252D34;
  border-top: 0px solid transparent;
  border-radius: 0rem 0rem 0.25rem 0.25rem;
  z-index: 1000;
}

.c10 {
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #252D34;
  background-color: transparent;
}

.c10:hover {
  background-color: rgba(0,0,0,0.05);
  cursor: pointer;
  outline: none;
}

.c10:focus {
  outline: none;
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  opacity: 0.8;
}

<div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4"
        />
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,15L12,10L17,15H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c9"
      color="#252D34"
    >
      <div
        class=" c10"
        color="#252D34"
        id="choosePokemon-option-bulbasaur"
        tabindex="0"
      >
        <span
          class=" "
        >
          Bulbasaur
        </span>
      </div>
      <div
        class=" c10"
        color="#252D34"
        id="choosePokemon-option-charmander"
        tabindex="0"
      >
        <span
          class=" "
        >
          Charmander
        </span>
      </div>
      <div
        class=" c10"
        color="#252D34"
        id="choosePokemon-option-squirtle"
        tabindex="0"
      >
        <span
          class=" "
        >
          Squirtle
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown closes options when clicking outside 2`] = `
<DocumentFragment>
  .c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c4 {
  opacity: 0.8;
}

<div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4"
        />
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Dropdown deselects option when clicking on them twice when dropdown is multi 1`] = `
.c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c4 {
  opacity: 0.8;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4"
        />
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown displays all options when focused 1`] = `
.c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 7;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 0px solid transparent;
  border-bottom-right-radius: 0rem;
  border-bottom-left-radius: 0rem;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c9 {
  background: white;
  position: absolute;
  top: 100%;
  left: 0px;
  max-height: 10rem;
  overflow-y: auto;
  width: 15rem;
  border: 1px solid #252D34;
  border-top: 0px solid transparent;
  border-radius: 0rem 0rem 0.25rem 0.25rem;
  z-index: 1000;
}

.c10 {
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #252D34;
  background-color: transparent;
}

.c10:hover {
  background-color: rgba(0,0,0,0.05);
  cursor: pointer;
  outline: none;
}

.c10:focus {
  outline: none;
  background-color: rgba(0,0,0,0.1);
}

.c4 {
  opacity: 0.8;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4"
        />
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,15L12,10L17,15H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c9"
      color="#252D34"
    >
      <div
        class=" c10"
        color="#252D34"
        id="choosePokemon-option-bulbasaur"
        tabindex="0"
      >
        <span
          class=" "
        >
          Bulbasaur
        </span>
      </div>
      <div
        class=" c10"
        color="#252D34"
        id="choosePokemon-option-charmander"
        tabindex="0"
      >
        <span
          class=" "
        >
          Charmander
        </span>
      </div>
      <div
        class=" c10"
        color="#252D34"
        id="choosePokemon-option-squirtle"
        tabindex="0"
      >
        <span
          class=" "
        >
          Squirtle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown displays placeholder value on initial render 1`] = `
.c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c4 {
  opacity: 0.8;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4"
        >
          Choose a pokemon
        </span>
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown does not display options on initial render 1`] = `
.c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c4 {
  opacity: 0.8;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4"
        />
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders a value when given a matching option id through props 1`] = `
.c6 {
  position: relative;
}

.c8 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c9 {
  border-radius: 0.25em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  background-color: transparent;
  color: #9FA2A5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c5 {
  padding: 0px;
  border: 0 none;
  background-color: transparent;
  color: #252D34;
  margin-right: .25rem;
  margin-top: 1px;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Bulbasaur
        </span>
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c6 c7"
      >
        <svg
          class="c8 c9"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders no value when given a value that doesn't match any option id 1`] = `
.c4 {
  position: relative;
}

.c6 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c7 {
  border-radius: 0.25em;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      />
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c4 c5"
      >
        <svg
          class="c6 c7"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders one value when given two values but only one matches an option id 1`] = `
.c6 {
  position: relative;
}

.c8 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c9 {
  border-radius: 0.25em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  background-color: transparent;
  color: #9FA2A5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c5 {
  padding: 0px;
  border: 0 none;
  background-color: transparent;
  color: #252D34;
  margin-right: .25rem;
  margin-top: 1px;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Bulbasaur
        </span>
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c6 c7"
      >
        <svg
          class="c8 c9"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders two values when given matching option ids through props 1`] = `
.c6 {
  position: relative;
}

.c8 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c9 {
  border-radius: 0.25em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  background-color: transparent;
  color: #9FA2A5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c5 {
  padding: 0px;
  border: 0 none;
  background-color: transparent;
  color: #252D34;
  margin-right: .25rem;
  margin-top: 1px;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Bulbasaur
          ,
        </span>
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Charmander
        </span>
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c6 c7"
      >
        <svg
          class="c8 c9"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown renders two values when given matching option ids through props when multi is set to true 1`] = `
.c6 {
  position: relative;
}

.c8 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c9 {
  border-radius: 0.25em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  background-color: transparent;
  color: #9FA2A5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c5 {
  padding: 0px;
  border: 0 none;
  background-color: transparent;
  color: #252D34;
  margin-right: .25rem;
  margin-top: 1px;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Bulbasaur
          ,
        </span>
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Charmander
        </span>
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c6 c7"
      >
        <svg
          class="c8 c9"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown selects options from values prop 1`] = `
.c6 {
  position: relative;
}

.c8 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #252D34;
  cursor: pointer;
  background-color: transparent;
  color: #252D34;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c9 {
  border-radius: 0.25em;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  background-color: transparent;
  color: #9FA2A5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s,box-shadow .5s;
  transition: filter .5s,box-shadow .5s;
  contain: layout;
  position: relative;
  z-index: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c3 {
  width: 100%;
  text-align: left;
}

.c5 {
  padding: 0px;
  border: 0 none;
  background-color: transparent;
  color: #252D34;
  margin-right: .25rem;
  margin-top: 1px;
}

<div>
  <div
    class=" c0"
    data-test-id="choosePokemon-container"
    elevation="0"
    id="choosePokemon-container"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class=" c1 c2"
      color="#252D34"
      data-test-id="hsui-button"
      elevation="0"
      id="choosePokemon-button-value"
      type="button"
    >
      <div
        class=" c3"
        id="choosePokemon-value-item"
      >
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Bulbasaur
          ,
        </span>
        <span
          class=" c4 c5"
          color="#9FA2A5"
          elevation="0"
        >
          Charmander
        </span>
      </div>
      <svg
        role="presentation"
        style="width: 1.25em; height: 1.25em;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          style="fill: currentColor;"
        />
      </svg>
      <div
        class="c6 c7"
      >
        <svg
          class="c8 c9"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
  </div>
</div>
`;
